Added save to Mongo!

--- a/test1/views/index.ejs
+++ b/test1/views/index.ejs
@@ -15,10 +15,10 @@
 
 <body>
 
-<div class="main_div text-center" style="padding:20% 30%;">
+<div class="main_div text-center" style="padding:0 30%;">
 
 
-<form class="" method="POST">
+<form class="" action="/save" method="POST">
     <label for="url"></label>
     <textarea   class="form-control" rows="8" name="url" id="url" placeholder="https://airbnb.com/..."></textarea>
     <input type="email" name="email" id="email"  class="form-control" placeholder="name@server.com" value="amantels@gmail.com">
