Better email template

--- a/test1/views/index.ejs
+++ b/test1/views/index.ejs
@@ -18,9 +18,16 @@
 <div class="main_div text-center" style="padding:0 30%;">
 
 
-<form class="" action="/save" method="POST">
-    <label for="url"></label>
-    <textarea   class="form-control" rows="8" name="url" id="url" placeholder="https://airbnb.com/..."></textarea>
+<form class="" action="/fetch" method="POST">
+    <label for="url">
+        
+         
+        </label>
+    
+    <textarea   class="form-control" rows="8" name="url" id="url" placeholder="https://airbnb.com/...">
+
+https://www.airbnb.com/s/Maldiv?guests=1&checkin=04%2F01%2F2017&checkout=04%2F07%2F2017&price_max=2845&ss_id=dmtd8n9l&ss_preload=true&source=bb&page=1&s_tag=YA5tDrsR&allow_override%5B%5D=
+    </textarea>
     <input type="email" name="email" id="email"  class="form-control" placeholder="name@server.com" value="amantels@gmail.com">
 
   <button type="submit" class="btn btn-default btn-lg">Subscribe me</button>
