--- a/test1/views/index.ejs
+++ b/test1/views/index.ejs
@@ -33,6 +33,8 @@ https://www.airbnb.ru/s/Maldiv?guests=1&checkin=29.04.2017&checkout=03.05.2017&p
   <button type="submit" class="btn btn-default btn-lg">Subscribe me</button>
 </form>
 
+  <a href="/crawl" class="btn btn-default btn-lg">crawl</a>
+  <a href="/sendmail" class="btn btn-default btn-lg">send</a>
 
 <ul>
       <% for(var i=0; i<requests.length; i++) {%>
